use virtual threads for tasks (wip)